--- a/accounts.html
+++ b/accounts.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Firebase Debug Upload</title>
+  <title>Firebase Debug Upload (Non-Resumable)</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { getStorage, ref, uploadBytesResumable } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
+    import { getStorage, ref, uploadBytes } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
@@ -21,41 +21,30 @@
     const storage = getStorage(app);
     const statusEl = document.getElementById("status");
 
-    async function tryUploadBlob() {
+    async function uploadTestBlob() {
       try {
         statusEl.textContent = "Logging in...";
         const userCredential = await signInWithEmailAndPassword(auth, "florisveen@gmail.com", "42884288");
         const user = userCredential.user;
-        statusEl.textContent = "Logged in as " + user.email + ". Preparing upload...";
 
-        const blob = new Blob(["Hello World"], { type: 'text/plain' });
-        const storageRef = ref(storage, 'testUploads/' + user.uid + '_test.txt');
-        const uploadTask = uploadBytesResumable(storageRef, blob);
+        const blob = new Blob(["Hello World"], { type: "text/plain" });
+        const storageRef = ref(storage, 'testUploads/' + user.uid + '_test_simple.txt');
 
-        uploadTask.on('state_changed',
-          (snapshot) => {
-            const percent = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-            statusEl.textContent = `Upload is ${percent.toFixed(0)}% done...`;
-          },
-          (error) => {
-            console.error("Upload error:", error);
-            statusEl.textContent = "Upload failed: " + error.message;
-          },
-          () => {
-            statusEl.textContent = "Upload complete!";
-          }
-        );
-      } catch (err) {
-        console.error("General error:", err);
-        statusEl.textContent = "Error: " + err.message;
+        statusEl.textContent = "Uploading blob...";
+        await uploadBytes(storageRef, blob);
+
+        statusEl.textContent = "Upload complete!";
+      } catch (error) {
+        console.error("Upload failed:", error);
+        statusEl.textContent = "Upload failed: " + error.message;
       }
     }
 
-    tryUploadBlob();
+    uploadTestBlob();
   </script>
 </head>
 <body style="background:black; color:white; text-align:center; padding-top:50px; font-family:sans-serif;">
-  <h1>Firebase Blob Upload Debug</h1>
+  <h1>Firebase Upload Test (Simple)</h1>
   <p id="status">Initializing...</p>
 </body>
 </html>
