--- a/accounts.html
+++ b/accounts.html
@@ -1,64 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Upload Test via Input</title>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { getStorage, ref, uploadBytes } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
+  <head>
+    <title>Firebase Upload Test</title>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
+  </head>
+  <body style="background:black; color:white; text-align:center;">
+    <h2>Select Image to Upload</h2>
+    <input type="file" id="fileInput" accept="image/*"><br><br>
+    <button onclick="uploadImage()">Upload</button>
+    <p id="status"></p>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
-      authDomain: "void-d9ec4.firebaseapp.com",
-      projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.appspot.com",
-      messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
-    };
+    <script>
+      // Your Firebase config
+      const firebaseConfig = {
+        apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
+        authDomain: "void-d9ec4.firebaseapp.com",
+        databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
+        projectId: "void-d9ec4",
+        storageBucket: "void-d9ec4.appspot.com", // corrected this!
+        messagingSenderId: "267268035851",
+        appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
+        measurementId: "G-ZYMQ3Z6LC5"
+      };
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const storage = getStorage(app);
-    const statusEl = document.getElementById("status");
-    const fileInput = document.getElementById("fileInput");
+      firebase.initializeApp(firebaseConfig);
+      const storage = firebase.storage();
 
-    let currentUser = null;
+      function uploadImage() {
+        const file = document.getElementById("fileInput").files[0];
+        if (!file) {
+          alert("No file selected");
+          return;
+        }
 
-    signInWithEmailAndPassword(auth, "florisveen@gmail.com", "42884288")
-      .then((userCredential) => {
-        currentUser = userCredential.user;
-        statusEl.textContent = "Logged in. Choose a file to upload.";
-      })
-      .catch((err) => {
-        statusEl.textContent = "Login failed: " + err.message;
-      });
-
-    fileInput.addEventListener("change", async (e) => {
-      if (!currentUser) {
-        statusEl.textContent = "Not logged in.";
-        return;
+        const reader = new FileReader();
+        reader.onloadend = function () {
+          const base64String = reader.result;
+          const fileRef = storage.ref('uploads/' + Date.now() + '.jpg');
+          fileRef.putString(base64String, 'data_url')
+            .then(snapshot => {
+              document.getElementById("status").textContent = "Upload success!";
+              console.log("Uploaded:", snapshot.metadata.fullPath);
+            })
+            .catch(error => {
+              console.error(error);
+              document.getElementById("status").textContent = "Upload failed.";
+            });
+        };
+        reader.readAsDataURL(file);
       }
-
-      const file = e.target.files[0];
-      if (!file) return;
-
-      statusEl.textContent = "Uploading " + file.name + "...";
-
-      const storageRef = ref(storage, "testUploads/" + currentUser.uid + "_" + file.name);
-
-      try {
-        await uploadBytes(storageRef, file);
-        statusEl.textContent = "Upload complete!";
-      } catch (err) {
-        console.error("Upload failed", err);
-        statusEl.textContent = "Upload failed: " + err.message;
-      }
-    });
-  </script>
-</head>
-<body style="background:black; color:white; text-align:center; padding-top:40px; font-family:sans-serif;">
-  <h1>Firebase Upload Test</h1>
-  <p id="status">Initializing...</p>
-  <input type="file" id="fileInput" style="margin-top:20px;" />
-</body>
+    </script>
+  </body>
 </html>
