--- a/accounts.html
+++ b/accounts.html
@@ -1,75 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Base64 Upload Test</title>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
-  </head>
-  <body style="background:black; color:white; text-align:center;">
-    <h2>Select Image to Upload</h2>
-    <input type="file" id="fileInput" accept="image/*"><br><br>
-    <button onclick="startUpload()">Upload</button>
-    <p id="status"></p>
-    <p id="downloadUrl"></p>
+<head>
+  <title>Safe Image Upload</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
+</head>
+<body style="background:black; color:white; text-align:center;">
+  <h2>Safe Upload (iOS Compatible)</h2>
+  <input type="file" id="fileInput" accept="image/*"><br><br>
+  <canvas id="hiddenCanvas" style="display:none;"></canvas>
+  <button onclick="startSafeUpload()">Upload</button>
+  <p id="status"></p>
+  <p id="downloadUrl"></p>
 
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
-        authDomain: "void-d9ec4.firebaseapp.com",
-        databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
-        projectId: "void-d9ec4",
-        storageBucket: "void-d9ec4.appspot.com",
-        messagingSenderId: "267268035851",
-        appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
-        measurementId: "G-ZYMQ3Z6LC5"
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
+      authDomain: "void-d9ec4.firebaseapp.com",
+      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
+      projectId: "void-d9ec4",
+      storageBucket: "void-d9ec4.appspot.com",
+      messagingSenderId: "267268035851",
+      appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
+      measurementId: "G-ZYMQ3Z6LC5"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const storage = firebase.storage();
+
+    function startSafeUpload() {
+      const file = document.getElementById('fileInput').files[0];
+      if (!file) {
+        alert("Select an image first.");
+        return;
+      }
+
+      const img = new Image();
+      const reader = new FileReader();
+      reader.onloadend = function () {
+        img.onload = function () {
+          const canvas = document.getElementById('hiddenCanvas');
+          canvas.width = img.width;
+          canvas.height = img.height;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(img, 0, 0);
+
+          canvas.toBlob(function (blob) {
+            const filePath = 'uploads/' + Date.now() + '_' + file.name;
+            const fileRef = storage.ref(filePath);
+
+            document.getElementById("status").textContent = "Uploading...";
+
+            fileRef.put(blob).then(snapshot => {
+              return snapshot.ref.getDownloadURL();
+            }).then(url => {
+              document.getElementById("status").textContent = "Upload complete.";
+              document.getElementById("downloadUrl").innerHTML = `<a href="${url}" style="color:lightgreen;">View Image</a>`;
+            }).catch(error => {
+              console.error("Upload failed:", error);
+              document.getElementById("status").textContent = "Upload failed.";
+            });
+          }, file.type);
+        };
+        img.src = reader.result;
       };
 
-      firebase.initializeApp(firebaseConfig);
-      const storage = firebase.storage();
-
-      function startUpload() {
-        const file = document.getElementById("fileInput").files[0];
-        if (!file) {
-          alert("No file selected");
-          return;
-        }
-
-        const reader = new FileReader();
-        reader.onloadend = function () {
-          let base64strOrj = reader.result; // full data URL
-          let base64str = base64strOrj.replace(/^data:image\/(jpeg|jpg|png);base64,/, '');
-
-          const metadata = {
-            contentType: file.type || 'image/jpeg'
-          };
-
-          const filePath = 'uploads/' + Date.now() + '_' + file.name;
-          const fileRef = storage.ref(filePath);
-          const uploadTask = fileRef.putString(base64str, 'base64', metadata);
-
-          document.getElementById("status").textContent = "Uploading...";
-
-          uploadTask.on('state_changed',
-            (snapshot) => {
-              const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-              document.getElementById("status").textContent = 'Upload is ' + Math.round(progress) + '% done';
-            },
-            (error) => {
-              console.error(error);
-              document.getElementById("status").textContent = 'Upload failed.';
-            },
-            () => {
-              // Completed
-              fileRef.getDownloadURL().then((url) => {
-                document.getElementById("status").textContent = 'Upload complete.';
-                document.getElementById("downloadUrl").innerHTML = `<a href="${url}" style="color:lightgreen;">View Uploaded Image</a>`;
-              });
-            }
-          );
-        };
-
-        reader.readAsDataURL(file);
-      }
-    </script>
-  </body>
+      reader.readAsDataURL(file);
+    }
+  </script>
+</body>
 </html>
