--- a/accounts.html
+++ b/accounts.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Safe Image Upload</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
+  <meta charset="UTF-8">
+  <title>Firebase Upload Test</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 2em;
+    }
+    input, button {
+      margin: 1em;
+    }
+  </style>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
 </head>
-<body style="background:black; color:white; text-align:center;">
-  <h2>Safe Upload (iOS Compatible)</h2>
-  <input type="file" id="fileInput" accept="image/*"><br><br>
-  <canvas id="hiddenCanvas" style="display:none;"></canvas>
-  <button onclick="startSafeUpload()">Upload</button>
+<body>
+  <h1>Firebase Image Upload Test</h1>
+
+  <input type="file" id="fileInput" accept="image/*"><br>
+  <button onclick="uploadImage()">Upload</button>
+
   <p id="status"></p>
-  <p id="downloadUrl"></p>
 
   <script>
+    // Step 1: Unregister any service workers
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.getRegistrations().then(function(registrations) {
+        for (let registration of registrations) {
+          console.log('Unregistering SW:', registration.scope);
+          registration.unregister();
+        }
+      });
+    }
+
+    // Step 2: Initialize Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
@@ -22,50 +46,42 @@
       storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
       appId: "1:267268035851:web:1e5ab79c51db42160f3e0e",
-      measurementId: "G-ZYMQ3Z6LC5"
     };
-
     firebase.initializeApp(firebaseConfig);
     const storage = firebase.storage();
 
-    function startSafeUpload() {
-      const file = document.getElementById('fileInput').files[0];
-      if (!file) {
-        alert("Select an image first.");
+    // Step 3: Upload Logic
+    function uploadImage() {
+      const fileInput = document.getElementById('fileInput');
+      const status = document.getElementById('status');
+
+      if (!fileInput.files.length) {
+        status.textContent = 'No file selected.';
         return;
       }
 
-      const img = new Image();
-      const reader = new FileReader();
-      reader.onloadend = function () {
-        img.onload = function () {
-          const canvas = document.getElementById('hiddenCanvas');
-          canvas.width = img.width;
-          canvas.height = img.height;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0);
+      const file = fileInput.files[0];
+      const storageRef = storage.ref('testUploads/' + Date.now() + '_' + file.name);
 
-          canvas.toBlob(function (blob) {
-            const filePath = 'uploads/' + Date.now() + '_' + file.name;
-            const fileRef = storage.ref(filePath);
+      const uploadTask = storageRef.put(file);
 
-            document.getElementById("status").textContent = "Uploading...";
-
-            fileRef.put(blob).then(snapshot => {
-              return snapshot.ref.getDownloadURL();
-            }).then(url => {
-              document.getElementById("status").textContent = "Upload complete.";
-              document.getElementById("downloadUrl").innerHTML = `<a href="${url}" style="color:lightgreen;">View Image</a>`;
-            }).catch(error => {
-              console.error("Upload failed:", error);
-              document.getElementById("status").textContent = "Upload failed.";
-            });
-          }, file.type);
-        };
-        img.src = reader.result;
-      };
-
-      reader.readAsDataURL(file);
+      uploadTask.on(
+        'state_changed',
+        (snapshot) => {
+          const percent = Math.round((snapshot.bytesTransferred / snapshot.totalBytes) * 100);
+          status.textContent = 'Uploading: ' + percent + '%';
+        },
+        (error) => {
+          console.error('Upload failed:', error);
+          status.textContent = 'Upload failed: ' + error.message;
+        },
+        () => {
+          uploadTask.snapshot.ref.getDownloadURL().then((downloadURL) => {
+            console.log('File available at:', downloadURL);
+            status.innerHTML = 'Upload success!<br><a href="' + downloadURL + '" target="_blank">View Image</a>';
+          });
+        }
+      );
     }
   </script>
 </body>
