--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div id="navMenu">
   <div onclick="location.href='index.html'">Enter the Abyss</div>
   <div onclick="location.href='echoes.html'">Echoes</div>
-  <div onclick="alert('Coming soon')">Void Profiles</div>
+  <div onclick="location.href='accounts.html'">Account</div>
   <div onclick="alert('Coming soon')">Dark Messenger</div>
   <div onclick="alert('Coming soon')">System Core</div>
 </div>
