--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Void Global Chat</title>
+  <title>powered by the VOID</title>
   <style>
     body {
       margin: 0;
@@ -124,7 +124,7 @@
 <body>
 
   <header>
-    VOID — Global Chat
+    powered by the VOID
     <span id="navToggle" onclick="toggleNav()">≡</span>
   </header>
 
