--- a/echoes.html
+++ b/echoes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VOID — Echoes</title>
+  <title>Echoes</title>
   <style>
     body {
       margin: 0;
@@ -184,12 +184,10 @@
     ECHOES <span id="navToggle">≡</span>
   </header>
   <div id="navMenu">
-    <div onclick="location.href='index.html'">Home</div>
-    <div onclick="location.href='view-profiles.html'">View Profiles</div>
-    <div onclick="location.href='chat.html'">Global Chat</div>
-    <div onclick="location.href='edit-profile.html'">Edit Profile</div>
-    <div onclick="location.href='login.html'">Login</div>
-    <div onclick="location.href='signup.html'">Sign Up</div>
+    <div onclick="location.href='index.html'">Enter the Abyss</div>
+    <div onclick="location.href='echoes.html'">Echoes</div>
+    <div onclick="location.href='accounts.html'">Account</div>
+   
   </div>
 
   <div id="subtitle">Start a discussion that echoes through the void.</div>
