--- a/accounts.html
+++ b/accounts.html
@@ -3,64 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Void — Account</title>
+  <title>Account - VOID</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: black;
       color: white;
-      text-align: center;
     }
 
     header {
       padding: 20px;
+      text-align: center;
       background-color: #111;
       font-size: 28px;
       font-weight: bold;
       border-bottom: 1px solid #444;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .form-container {
-      margin-top: 30px;
+    #navToggle {
+      cursor: pointer;
+      font-size: 28px;
+      margin-left: 12px;
     }
 
-    input, button {
-      margin: 5px;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
+    #navMenu {
+      display: none;
+      margin-top: 10px;
+      font-family: monospace;
+      color: white;
+      text-align: center;
+    }
+
+    #navMenu div {
+      margin: 4px 0;
+      cursor: pointer;
+    }
+
+    #navMenu div:hover {
+      text-decoration: underline;
+    }
+
+    #accountContainer {
+      text-align: center;
+      padding: 30px;
     }
 
     button {
+      margin: 10px;
+      padding: 10px 20px;
+      border: none;
       background-color: #333;
       color: white;
       cursor: pointer;
+      border-radius: 4px;
     }
 
     button:hover {
       background-color: #555;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    #profileView {
-      margin-top: 30px;
-    }
-
-    #editProfileForm {
-      margin-top: 20px;
-    }
-
-    #profilePic {
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-top: 10px;
-      border: 2px solid #444;
     }
   </style>
 
@@ -71,131 +74,69 @@
 </head>
 <body>
 
-  <header>VOID — Accounts</header>
+  <header>
+    powered by the VOID
+    <span id="navToggle" onclick="toggleNav()">≡</span>
+  </header>
 
-  <div class="form-container" id="authForms">
-    <h2 id="formTitle">Login</h2>
-    <input type="email" id="email" placeholder="Email"><br>
-    <input type="password" id="password" placeholder="Password"><br>
-    <button onclick="login()">Login</button>
-    <button onclick="toggleForm()">Switch to Signup</button>
+  <div id="navMenu">
+    <div onclick="location.href='index.html'">Enter the Abyss</div>
+    <div onclick="location.href='echoes.html'">Echoes</div>
+    <div onclick="location.href='accounts.html'">Account</div>
+    <div onclick="alert('Coming soon')">Dark Messenger</div>
+    <div onclick="alert('Coming soon')">System Core</div>
   </div>
 
-  <div class="form-container hidden" id="signupForm">
-    <h2>Signup</h2>
-    <input type="text" id="signupUsername" placeholder="Username (min 6 chars)"><br>
-    <input type="email" id="signupEmail" placeholder="Email"><br>
-    <input type="password" id="signupPassword" placeholder="Password (min 8 chars)"><br>
-    <input type="text" id="signupPicURL" placeholder="Profile Picture URL"><br>
-    <button onclick="signup()">Signup</button>
-    <button onclick="toggleForm()">Back to Login</button>
-  </div>
-
-  <div id="profileView" class="hidden">
-    <h2>Your Profile</h2>
-    <img id="profilePic" src="" alt="Profile Picture"><br>
-    <p><strong>Username:</strong> <span id="viewUsername"></span></p>
-    <p><strong>Email:</strong> <span id="viewEmail"></span></p>
-    <button onclick="showEditForm()">Edit Profile</button>
-    <button onclick="logout()">Logout</button>
-  </div>
-
-  <div id="editProfileForm" class="hidden">
-    <h2>Edit Profile</h2>
-    <input type="text" id="editUsername" placeholder="New Username"><br>
-    <input type="text" id="editPicURL" placeholder="New Profile Picture URL"><br>
-    <button onclick="saveProfile()">Save</button>
+  <div id="accountContainer">
+    <div id="userStatus"></div>
+    <div id="authButtons">
+      <button onclick="location.href='login.html'">Log In</button>
+      <button onclick="location.href='signup.html'">Sign Up</button>
+    </div>
+    <div id="profileButtons" style="display:none;">
+      <button onclick="location.href='edit-profile.html'">Edit Profile</button>
+      <button onclick="logout()">Log Out</button>
+    </div>
   </div>
 
   <script>
+    function toggleNav() {
+      const menu = document.getElementById("navMenu");
+      menu.style.display = menu.style.display === "block" ? "none" : "block";
+    }
+
     const firebaseConfig = {
-      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
+      apiKey: "AIzaSyClW4zHDde1rQm6RkHQcD2rM0sklBBgdrM",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
       storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:1e5ab79c51db42160f3e0e"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
 
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-    const db = firebase.database();
-
-    function toggleForm() {
-      document.getElementById('authForms').classList.toggle('hidden');
-      document.getElementById('signupForm').classList.toggle('hidden');
-    }
-
-    function signup() {
-      const email = document.getElementById('signupEmail').value;
-      const password = document.getElementById('signupPassword').value;
-      const username = document.getElementById('signupUsername').value;
-      const picURL = document.getElementById('signupPicURL').value;
-
-      if (username.length < 6 || password.length < 8) {
-        alert("Username must be at least 6 characters, password at least 8.");
-        return;
-      }
-
-      auth.createUserWithEmailAndPassword(email, password).then(userCred => {
-        const uid = userCred.user.uid;
-        db.ref("users/" + uid).set({
-          username: username,
-          email: email,
-          profilePic: picURL
-        });
-      }).catch(err => alert(err.message));
-    }
-
-    function login() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      auth.signInWithEmailAndPassword(email, password).catch(err => alert(err.message));
-    }
-
-    function logout() {
-      auth.signOut();
-      location.reload();
-    }
-
-    function showEditForm() {
-      document.getElementById("editProfileForm").classList.remove("hidden");
-    }
-
-    function saveProfile() {
-      const newUsername = document.getElementById("editUsername").value;
-      const newPicURL = document.getElementById("editPicURL").value;
-      const user = auth.currentUser;
-
-      if (user && newUsername.length >= 6) {
-        const updates = { username: newUsername };
-        if (newPicURL) updates.profilePic = newPicURL;
-
-        db.ref("users/" + user.uid).update(updates);
-        if (newUsername) document.getElementById("viewUsername").textContent = newUsername;
-        if (newPicURL) document.getElementById("profilePic").src = newPicURL;
-        document.getElementById("editProfileForm").classList.add("hidden");
-      } else {
-        alert("Username must be at least 6 characters.");
-      }
-    }
 
     auth.onAuthStateChanged(user => {
-      if (user) {
-        document.getElementById("authForms").classList.add("hidden");
-        document.getElementById("signupForm").classList.add("hidden");
-        document.getElementById("profileView").classList.remove("hidden");
+      const userStatus = document.getElementById("userStatus");
+      const authButtons = document.getElementById("authButtons");
+      const profileButtons = document.getElementById("profileButtons");
 
-        db.ref("users/" + user.uid).once("value").then(snapshot => {
-          const data = snapshot.val();
-          document.getElementById("viewUsername").textContent = data.username || "Unknown";
-          document.getElementById("viewEmail").textContent = data.email || "No email";
-          document.getElementById("profilePic").src = data.profilePic || "";
-        });
+      if (user) {
+        userStatus.textContent = "Logged in as: " + (user.email || "User");
+        authButtons.style.display = "none";
+        profileButtons.style.display = "block";
+      } else {
+        userStatus.textContent = "You are not logged in.";
+        authButtons.style.display = "block";
+        profileButtons.style.display = "none";
       }
     });
+
+    function logout() {
+      firebase.auth().signOut();
+    }
   </script>
 </body>
 </html>
